Created page with ":* [[Image:BIM_Report.svg|32px]] [[BIM_Report/pl|Raport BIM]]: Tworzy nowy Raport BIM, aby sprawdzić dane modelu z SQL. {{Version/pl|1.2}}"

--- a/wiki/pl/BIM_Workbench.html
+++ b/wiki/pl/BIM_Workbench.html
@@ -5,7 +5,7 @@
 <li><a href="../fr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier BIM (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM radni stol (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (68% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Bancada de trabalho BIM (17% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; BIM (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -192,9 +192,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Layers.html" title="BIM Layers/pl">Zarz&#261;dzaj warstwami ...</a>: Zarz&#261;dzanie warstwami dokumentu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;</a>: Zarz&#261;dza <a href="../pl/Arch_SetMaterial.html" title="Arch SetMaterial/pl">materia&#322;ami</a> lub <a href="../pl/Arch_MultiMaterial.html" title="Arch MultiMaterial/pl">materia&#322;ami wielowarstwowymi</a> wybranych obiekt&oacute;w.</li></ul>
 <ul><li><span id="BIM_ReportTools">Narz&#281;dzia do raportowania:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport BIM</a>: Tworzy nowy Raport BIM, aby sprawdzi&#263; dane modelu z SQL. <span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/pl&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/pl (page does not exist)">dost&#281;pne w wersji 1.2</a></span></li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Arch_Schedule.html" title="Arch Schedule/pl">Obmiar</a>: Tworzenie r&oacute;&#380;nych typ&oacute;w obmiaru.</li></ul>
 </div>
@@ -371,34 +369,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115110649
+Cached time: 20260115113557
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.393 seconds
-Real time usage: 0.608 seconds
-Preprocessor visited node count: 885/1000000
-Post&#8208;expand include size: 24559/2097152 bytes
+CPU time usage: 0.389 seconds
+Real time usage: 0.578 seconds
+Preprocessor visited node count: 884/1000000
+Post&#8208;expand include size: 24567/2097152 bytes
 Template argument size: 9566/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2093/5000000 bytes
+Unstrip post&#8208;expand size: 2097/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.577      1 -total
- 39.88%   11.396      1 Template:BIM_Tools_navi/pl
- 18.56%    5.303      2 Template:Navigation_menu_2
- 14.41%    4.118      7 Template:VersionPlus/pl
- 10.53%    3.008      1 Template:Userdocnavi/pl
-  9.90%    2.829      2 Template:Docnav/pl
-  8.70%    2.487      1 Template:MenuCommand
-  6.69%    1.912      1 Template:Version
-  5.15%    1.471      1 Template:TOCright
+100.00%   18.628      1 -total
+ 44.05%    8.206      1 Template:BIM_Tools_navi/pl
+ 24.36%    4.537      2 Template:Navigation_menu_2
+ 12.70%    2.365      7 Template:VersionPlus/pl
+ 11.23%    2.092      2 Template:Docnav/pl
+  7.99%    1.488      1 Template:Userdocnavi/pl
+  6.38%    1.188      1 Template:MenuCommand
+  6.32%    1.178      1 Template:Version/pl
+  5.36%    0.998      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115110648 and revision id 1738705. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115113556 and revision id 1738707. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
