Updated page BIM Workbench/pl

--- a/wiki/pl/BIM_Workbench.html
+++ b/wiki/pl/BIM_Workbench.html
@@ -193,9 +193,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;</a>: Zarz&#261;dza <a href="../pl/Arch_SetMaterial.html" title="Arch SetMaterial/pl">materia&#322;ami</a> lub <a href="../pl/Arch_MultiMaterial.html" title="Arch MultiMaterial/pl">materia&#322;ami wielowarstwowymi</a> wybranych obiekt&oacute;w.</li></ul>
 <ul><li><span id="BIM_ReportTools">Narz&#281;dzia do raportowania:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport BIM</a>: Tworzy nowy Raport BIM, aby sprawdzi&#263; dane modelu z SQL. <span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/pl&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/pl (page does not exist)">dost&#281;pne w wersji 1.2</a></span></li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Arch_Schedule.html" title="Arch Schedule/pl">Obmiar</a>: Tworzenie r&oacute;&#380;nych typ&oacute;w obmiaru.</li></ul>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Arch_Schedule.html" title="Arch Schedule/pl">Obmiar</a>: Tworzenie r&oacute;&#380;nych typ&oacute;w obmiaru.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Preflight.svg&amp;filetimestamp=20240608121802&amp;.html" class="mw-file-description"><img src="../File/BIM_Preflight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Preflight.html" title="BIM Preflight/pl">Kontrola wst&#281;pna ...</a>: Przed wyeksportowaniem do IFC nale&#380;y przeprowadzi&#263; r&oacute;&#380;ne operacje sprawdzaj&#261;ce model.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Draft_AnnotationStyleEditor.svg&amp;filetimestamp=20200513071606&amp;.html" class="mw-file-description"><img src="../File/Draft_AnnotationStyleEditor.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Draft_AnnotationStyleEditor.html" title="Draft AnnotationStyleEditor/pl">Edytor styl&oacute;w adnotacji</a>: pozwala zdefiniowa&#263; style, kt&oacute;re wp&#322;ywaj&#261; na w&#322;a&#347;ciwo&#347;ci wizualne obiekt&oacute;w zwi&#261;zanych z adnotacjami.</li></ul>
 <p><span id="Utils"></span>
@@ -369,13 +367,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115113557
+Cached time: 20260115113606
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.389 seconds
-Real time usage: 0.578 seconds
-Preprocessor visited node count: 884/1000000
+CPU time usage: 0.356 seconds
+Real time usage: 0.418 seconds
+Preprocessor visited node count: 883/1000000
 Post&#8208;expand include size: 24567/2097152 bytes
 Template argument size: 9566/2097152 bytes
 Highest expansion depth: 5/100
@@ -385,18 +383,18 @@ Unstrip post&#8208;expand size: 2097/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.628      1 -total
- 44.05%    8.206      1 Template:BIM_Tools_navi/pl
- 24.36%    4.537      2 Template:Navigation_menu_2
- 12.70%    2.365      7 Template:VersionPlus/pl
- 11.23%    2.092      2 Template:Docnav/pl
-  7.99%    1.488      1 Template:Userdocnavi/pl
-  6.38%    1.188      1 Template:MenuCommand
-  6.32%    1.178      1 Template:Version/pl
-  5.36%    0.998      1 Template:TOCright
+100.00%   28.231      1 -total
+ 50.83%   14.349      1 Template:BIM_Tools_navi/pl
+ 30.93%    8.731      2 Template:Navigation_menu_2
+ 10.54%    2.976      2 Template:Docnav/pl
+  9.40%    2.654      7 Template:VersionPlus/pl
+  7.73%    2.182      1 Template:Userdocnavi/pl
+  6.82%    1.924      1 Template:Version/pl
+  4.68%    1.321      1 Template:MenuCommand
+  4.37%    1.234      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115113556 and revision id 1738707. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115113606 and revision id 1738709. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
