--- a/wiki/pl/BIM_Material.html
+++ b/wiki/pl/BIM_Material.html
@@ -2,17 +2,15 @@
 <li><a href="../de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Material (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Material.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Mat&eacute;riau (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM Material/pt-br (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Layers.html" title="BIM Layers/pl">Wartwy</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/Arch_Schedule.html" title="Arch Schedule/pl">Obmiar</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">&#347;rodowisko pracy BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -195,14 +193,12 @@ U&#380;ytkownicy, kt&oacute;rzy potrzebuj&#261; w&#322;a&#347;ciwo&#347;ci fizyc
 To obej&#347;cie wi&#261;&#380;e si&#281; ze znacznym ryzykiem <b>desynchronizacji danych</b>. Dwa przypisania materia&#322;&oacute;w s&#261; ca&#322;kowicie niezale&#380;ne. Aktualizacja nazwy lub koloru materia&#322;u BIM nie ma wp&#322;ywu na materia&#322; rdzenia i odwrotnie. U&#380;ytkownicy musz&#261; r&#281;cznie zapewni&#263; sp&oacute;jno&#347;&#263; dw&oacute;ch przypisanych materia&#322;&oacute;w, aby unikn&#261;&#263; konfliktu informacji mi&#281;dzy analizami wewn&#281;trznymi a zewn&#281;trznymi wynikami BIM. Obiekt wielomateria&#322;owy systemu BIM, kt&oacute;ry nie ma odpowiednika w systemie rdzenia, musi by&#263; nadal u&#380;ywany i zarz&#261;dzany wy&#322;&#261;cznie za pomoc&#261; materia&#322;&oacute;w BIM.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Layers.html" title="BIM Layers/pl">Wartwy</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/Arch_Schedule.html" title="Arch Schedule/pl">Obmiar</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">&#347;rodowisko pracy BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">BIM</a>
@@ -246,35 +242,35 @@ To obej&#347;cie wi&#261;&#380;e si&#281; ze znacznym ryzykiem <b>desynchronizac
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103737
+Cached time: 20260115113626
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.130 seconds
-Preprocessor visited node count: 1421/1000000
-Post&#8208;expand include size: 34325/2097152 bytes
-Template argument size: 10823/2097152 bytes
+CPU time usage: 0.113 seconds
+Real time usage: 0.137 seconds
+Preprocessor visited node count: 1419/1000000
+Post&#8208;expand include size: 34289/2097152 bytes
+Template argument size: 10799/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1300/5000000 bytes
+Unstrip post&#8208;expand size: 1304/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.280      1 -total
- 31.32%   11.050     19 Template:PropertyData
- 22.42%    7.911     19 Template:Variable
- 21.77%    7.681      1 Template:BIM_Tools_navi/pl
- 12.46%    4.396      2 Template:Navigation_menu_2
-  8.16%    2.878      2 Template:Docnav/pl
-  6.92%    2.440      1 Template:GuiCommand/pl
-  5.43%    1.914      1 Template:Userdocnavi/pl
-  4.42%    1.560      1 Template:Caption
-  4.38%    1.544     15 Template:Incode
+100.00%   38.985      1 -total
+ 26.47%   10.321     19 Template:PropertyData
+ 24.11%    9.399      1 Template:BIM_Tools_navi/pl
+ 20.40%    7.953     19 Template:Variable
+ 15.54%    6.058      2 Template:Navigation_menu_2
+  9.26%    3.611      7 Template:Button
+  6.89%    2.687      1 Template:Properties_Title
+  5.66%    2.205      2 Template:Docnav/pl
+  5.46%    2.128      1 Template:GuiCommand/pl
+  5.15%    2.008      1 Template:Userdocnavi/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:356533-0!canonical and timestamp 20260115103737 and revision id 1738650. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:356533-0!canonical and timestamp 20260115113625 and revision id 1738713. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
