--- a/wiki/pl/Arch_Schedule.html
+++ b/wiki/pl/Arch_Schedule.html
@@ -3,18 +3,16 @@
 <li><a href="../Arch_Schedule.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Schedule (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Nomenclature (91% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Scheda (32% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Cronograma (14% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Schedule (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch &#1055;&#1083;&#1072;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; (27% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;y</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Preflight.html" title="BIM Preflight/pl">Kontrola wst&#281;pna</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">&#347;rodowisko pracy BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -135,14 +133,12 @@
 <p>Mo&#380;liwe jest dodawanie w&#322;asnych w&#322;a&#347;ciwo&#347;ci do obiekt&oacute;w. S&#261; one nazywane <a href="../pl/Property_View.html#Menu_kontekstowe" title="Property View/pl">w&#322;a&#347;ciwo&#347;ciami dynamicznymi</a>. Je&#347;li zosta&#322;y one dodane z zaznaczon&#261; opcj&#261; <b>Prefiks dla nazwy grupy</b>, ich nazwy rzeczywi&#347;cie zaczynaj&#261; si&#281; od nazwy grupy, ale ten przedrostek nie jest wy&#347;wietlany w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a>. Ich nazwy maj&#261; nast&#281;puj&#261;c&#261; posta&#263;: <code>NameOfGroup_NameOfProperty</code>. Aby odwo&#322;a&#263; si&#281; do nich w harmonogramie, nale&#380;y u&#380;y&#263; tej pe&#322;nej nazwy.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;y</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/pl&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/pl (page does not exist)">Raport</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Preflight.html" title="BIM Preflight/pl">Kontrola wst&#281;pna</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">&#347;rodowisko pracy BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">BIM</a>
@@ -186,35 +182,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103805
+Cached time: 20260115113731
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 1027/1000000
-Post&#8208;expand include size: 30931/2097152 bytes
-Template argument size: 10625/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 1025/1000000
+Post&#8208;expand include size: 30883/2097152 bytes
+Template argument size: 10593/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1616/5000000 bytes
+Unstrip post&#8208;expand size: 1620/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.701      1 -total
- 26.69%    8.995      1 Template:BIM_Tools_navi/pl
- 24.77%    8.349     10 Template:PropertyData
- 18.41%    6.205     10 Template:Variable
- 16.58%    5.589      2 Template:Navigation_menu_2
- 10.07%    3.392      2 Template:Docnav/pl
-  9.99%    3.366      1 Template:GuiCommand/pl
-  6.97%    2.350     27 Template:Incode
-  6.24%    2.102      1 Template:Userdocnavi/pl
-  4.47%    1.507      9 Template:Button
+100.00%   26.408      1 -total
+ 25.75%    6.799      1 Template:BIM_Tools_navi/pl
+ 20.26%    5.350     10 Template:PropertyData
+ 17.26%    4.557      2 Template:Navigation_menu_2
+ 14.35%    3.788     10 Template:Variable
+ 11.96%    3.157      2 Template:Docnav/pl
+  9.57%    2.527      1 Template:GuiCommand/pl
+  9.00%    2.378      1 Template:Userdocnavi/pl
+  6.35%    1.677     27 Template:Incode
+  4.61%    1.217      9 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241810-0!canonical and timestamp 20260115103805 and revision id 1738658. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241810-0!canonical and timestamp 20260115113731 and revision id 1738719. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
