--- a/wiki/pl/BIM_Setup.html
+++ b/wiki/pl/BIM_Setup.html
@@ -57,8 +57,9 @@
 </p>
 <h2><span class="mw-headline" id="Opis">Opis</span></h2>
 <p>System preferencji programu FreeCAD, znajduj&#261;cy si&#281; w menu <b>Edycja &rarr; Preferencje</b>, jest bardzo z&#322;o&#380;ony. Okno dialogowe <b>Konfiguracja BIM</b> oferuje jego uproszczon&#261; wersj&#281;, gromadz&#261;c niekt&oacute;re z ustawie&#324; preferencji najcz&#281;&#347;ciej u&#380;ywanych w pracy ze &#347;rodowiskiem BIM w jednym prostym oknie. Zmiana czegokolwiek tam ma taki sam efekt jak zmiana odpowiedniego ustawienia w w Preferencjach.
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Setup.html" title="BIM Setup">BIM Setup</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Setup</b> option from the menu.</li></ul></li></ol>
@@ -115,13 +116,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101704
+Cached time: 20260115113735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 359/1000000
+CPU time usage: 0.068 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 360/1000000
 Post&#8208;expand include size: 25203/2097152 bytes
 Template argument size: 9844/2097152 bytes
 Highest expansion depth: 6/100
@@ -131,17 +132,17 @@ Unstrip post&#8208;expand size: 1545/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.455      1 -total
- 33.72%    8.583      1 Template:BIM_Tools_navi/pl
- 20.87%    5.313      2 Template:Navigation_menu_2
- 17.93%    4.563      2 Template:MenuCommand
- 13.40%    3.410      1 Template:Userdocnavi/pl
- 13.24%    3.371      2 Template:Docnav/pl
- 12.02%    3.060      1 Template:GuiCommand/pl
-  7.63%    1.942      1 Template:Button
+100.00%   21.399      1 -total
+ 49.63%   10.620      1 Template:BIM_Tools_navi/pl
+ 21.29%    4.556      2 Template:Navigation_menu_2
+ 15.40%    3.295      1 Template:GuiCommand/pl
+ 12.52%    2.679      2 Template:Docnav/pl
+  9.23%    1.976      1 Template:Button
+  6.50%    1.391      1 Template:Userdocnavi/pl
+  4.44%    0.949      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244768-0!canonical and timestamp 20260115101704 and revision id 1738636. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244768-0!canonical and timestamp 20260115113735 and revision id 1738721. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
