Created page with "# Istnieje kilka sposobów na wywołanie tego polecenia: #* Naciśnij przycisk {{Button|[[Image:BIM_Setup.svg|16px]] [[BIM_Setup/pl|Konfiguracja środowiska]]}}. #* Wybierz opcję {{MenuCommand|Zarządzaj → [[Image:BIM_Setup.svg|16px]] Konfiguracja środowiska}} z menu."

--- a/wiki/pl/BIM_Setup.html
+++ b/wiki/pl/BIM_Setup.html
@@ -4,7 +4,7 @@
 <li><a href="../es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Configuration des BIM (78% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (22% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -60,9 +60,9 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Setup.html" title="BIM Setup">BIM Setup</a></span> button.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Setup</b> option from the menu.</li></ul></li></ol>
+<ol><li>Istnieje kilka sposob&oacute;w na wywo&#322;anie tego polecenia:
+<ul><li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Konfiguracja &#347;rodowiska</a></span>.</li>
+<li>Wybierz opcj&#281; <b>Zarz&#261;dzaj &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Konfiguracja &#347;rodowiska</b> z menu.</li></ul></li></ol>
 <p><span typeof="mw:File"><a href="../index.php?title=BIM_setup_screenshot.png&amp;filetimestamp=20200920040346&amp;.html" class="mw-file-description"><img src="../File/BIM_setup_screenshot.png" decoding="async" width="400" height="584" class="mw-file-element" data-file-width="523" data-file-height="764"></a></span>
 </p><p>Po najechaniu myszk&#261; na poszczeg&oacute;lne ustawienia, pojawi si&#281; podpowied&#378; wyja&#347;niaj&#261;ca do czego one s&#322;u&#380;&#261; oraz lokalizacja odpowiadaj&#261;cego im ustawienia w og&oacute;lnym systemie preferencji FreeCAD.
 </p><p><br>
@@ -116,33 +116,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115113735
+Cached time: 20260115113843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
+CPU time usage: 0.079 seconds
 Real time usage: 0.111 seconds
 Preprocessor visited node count: 360/1000000
-Post&#8208;expand include size: 25203/2097152 bytes
-Template argument size: 9844/2097152 bytes
+Post&#8208;expand include size: 25240/2097152 bytes
+Template argument size: 9881/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1545/5000000 bytes
+Unstrip post&#8208;expand size: 1549/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.399      1 -total
- 49.63%   10.620      1 Template:BIM_Tools_navi/pl
- 21.29%    4.556      2 Template:Navigation_menu_2
- 15.40%    3.295      1 Template:GuiCommand/pl
- 12.52%    2.679      2 Template:Docnav/pl
-  9.23%    1.976      1 Template:Button
-  6.50%    1.391      1 Template:Userdocnavi/pl
-  4.44%    0.949      2 Template:MenuCommand
+100.00%   22.169      1 -total
+ 47.95%   10.631      1 Template:BIM_Tools_navi/pl
+ 24.04%    5.330      2 Template:Navigation_menu_2
+ 11.80%    2.615      2 Template:Docnav/pl
+ 11.34%    2.513      1 Template:Button
+ 10.93%    2.422      1 Template:GuiCommand/pl
+  9.91%    2.198      1 Template:Userdocnavi/pl
+  5.22%    1.158      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244768-0!canonical and timestamp 20260115113735 and revision id 1738721. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244768-0!canonical and timestamp 20260115113843 and revision id 1738723. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
