Updated page BIM Layers/pl

--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -52,11 +52,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Opis">Opis</span></h2>
-<div class="mw-translate-fuzzy">
 <p><b>Mened&#380;er warstw</b> umo&#380;liwia zarz&#261;dzanie <a href="../pl/Draft_Layer.html" title="Draft Layer/pl">warstwami</a>. Warstwy s&#261; specjalnym rodzajem grupy, kt&oacute;ra kontroluje w&#322;a&#347;ciwo&#347;ci wizualne obiekt&oacute;w umieszczonych wewn&#261;trz niej. Zmieniaj&#261;c w&#322;a&#347;ciwo&#347;ci warstwy, takie jak szeroko&#347;&#263; linii, kolor linii, kolor kszta&#322;tu i przezroczysto&#347;&#263;, zmiany s&#261; przekazywane do jej obiekt&oacute;w podrz&#281;dnych. Warstwy nie koliduj&#261; z &#380;adn&#261; inn&#261; struktur&#261; FreeCAD, tak&#261; jak <a href="../pl/Std_Group.html" title="Std Group/pl">grupa</a> lub <a href="../pl/Arch_BuildingPart.html" title="Arch BuildingPart/pl">cz&#281;&#347;&#263; budowli</a>, wi&#281;c ka&#380;dy obiekt mo&#380;e by&#263; jednocze&#347;nie cz&#281;&#347;ci&#261; warstwy i cz&#281;&#347;ci&#261; grupy.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mened&#380;er warstw</p>
 <p>Warstwy s&#261; importowane i eksportowane z / do format&oacute;w takich jak: <a href="../pl/Arch_IFC.html" title="Arch IFC/pl">IFC</a> i <a href="../pl/Draft_DXF.html" title="Draft DXF/pl">DXF / DWG</a>.
@@ -137,13 +134,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101508
+Cached time: 20260115113854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 372/1000000
+CPU time usage: 0.091 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 371/1000000
 Post&#8208;expand include size: 26104/2097152 bytes
 Template argument size: 9837/2097152 bytes
 Highest expansion depth: 5/100
@@ -153,18 +150,18 @@ Unstrip post&#8208;expand size: 1109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.187      1 -total
- 44.82%    8.151      1 Template:BIM_Tools_navi/pl
- 24.53%    4.462      2 Template:Navigation_menu_2
- 14.19%    2.581      2 Template:Docnav/pl
- 13.48%    2.452      1 Template:GuiCommandAddon/pl
-  7.96%    1.447      1 Template:Userdocnavi/pl
-  6.26%    1.139      1 Template:Caption
-  5.21%    0.948      2 Template:Button
-  4.61%    0.839      1 Template:MenuCommand
+100.00%   18.176      1 -total
+ 40.59%    7.377      1 Template:BIM_Tools_navi/pl
+ 23.98%    4.359      2 Template:Navigation_menu_2
+ 13.47%    2.449      1 Template:GuiCommandAddon/pl
+ 13.28%    2.413      2 Template:Docnav/pl
+  7.97%    1.449      1 Template:Userdocnavi/pl
+  7.23%    1.314      2 Template:Button
+  6.98%    1.268      1 Template:MenuCommand
+  6.79%    1.234      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115101508 and revision id 1738625. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115113854 and revision id 1738725. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
