--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -57,20 +57,14 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mened&#380;er warstw</p>
 <p>Warstwy s&#261; importowane i eksportowane z / do format&oacute;w takich jak: <a href="../pl/Arch_IFC.html" title="Arch IFC/pl">IFC</a> i <a href="../pl/Draft_DXF.html" title="Draft DXF/pl">DXF / DWG</a>.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Mened&#380;er warstw umo&#380;liwia zarz&#261;dzanie warstwami, dodawanie lub usuwanie warstw oraz zmian&#281; ich w&#322;a&#347;ciwo&#347;ci wizualnych. Aby doda&#263; obiekty do warstwy, wystarczy przeci&#261;gn&#261;&#263; je na warstw&#281; w <a href="../pl/Tree_view.html" class="mw-redirect" title="Tree view/pl">widoku drzewa</a>. Aby je usun&#261;&#263;, przeci&#261;gnij je z warstwy i upu&#347;&#263; w katalogu g&#322;&oacute;wnym dokumentu.
-</p>
-</div>
-<p><span id="NativeIFC"></span>
+</p><p>Mened&#380;er warstw umo&#380;liwia zarz&#261;dzanie warstwami, dodawanie lub usuwanie warstw oraz zmian&#281; ich w&#322;a&#347;ciwo&#347;ci wizualnych. Aby doda&#263; obiekty do warstwy, wystarczy przeci&#261;gn&#261;&#263; je na warstw&#281; w <a href="../pl/Tree_View.html" title="Tree View/pl">Widoku drzewa</a>. Aby je usun&#261;&#263;, przeci&#261;gnij je z warstwy i upu&#347;&#263; w katalogu g&#322;&oacute;wnym dokumentu.
+</p><p><span id="NativeIFC"></span>
 </p>
 <h2><span class="mw-headline" id="Natywne_IFC">Natywne IFC</span></h2>
 <p>To narz&#281;dzie jest dok&#322;adnie takie samo jak <a href="../pl/Draft_LayerManager.html" title="Draft LayerManager/pl">Rysunek Roboczy: Mened&#380;er warstw</a> i tworzy ten sam obiekt warstwy. Jest tylko jedna r&oacute;&#380;nica: obs&#322;uguje obiekty <a href="../index.php?title=NativeIFC/pl&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/pl (page does not exist)">Natywne IFC</a>:
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Ikona IFC wskazuje, czy warstwa jest cz&#281;&#347;ci&#261; projektu IFC, czy nie.</li>
 <li>Przycisk <b>Przypisz IFC</b> umo&#380;liwia przeniesienie warstwy do projektu IFC i przekszta&#322;cenie jej w warstw&#281; IFC.</li></ul>
-</div>
 <p>Implementation of <a href="../NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
@@ -134,13 +128,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115113854
+Cached time: 20260115113906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 371/1000000
+CPU time usage: 0.080 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 369/1000000
 Post&#8208;expand include size: 26104/2097152 bytes
 Template argument size: 9837/2097152 bytes
 Highest expansion depth: 5/100
@@ -150,18 +144,18 @@ Unstrip post&#8208;expand size: 1109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.176      1 -total
- 40.59%    7.377      1 Template:BIM_Tools_navi/pl
- 23.98%    4.359      2 Template:Navigation_menu_2
- 13.47%    2.449      1 Template:GuiCommandAddon/pl
- 13.28%    2.413      2 Template:Docnav/pl
-  7.97%    1.449      1 Template:Userdocnavi/pl
-  7.23%    1.314      2 Template:Button
-  6.98%    1.268      1 Template:MenuCommand
-  6.79%    1.234      1 Template:Caption
+100.00%   30.279      1 -total
+ 35.30%   10.688      1 Template:BIM_Tools_navi/pl
+ 15.63%    4.734      2 Template:Navigation_menu_2
+ 14.65%    4.436      1 Template:GuiCommandAddon/pl
+ 14.14%    4.283      2 Template:Docnav/pl
+ 12.72%    3.852      1 Template:MenuCommand
+  9.65%    2.922      1 Template:Userdocnavi/pl
+  6.70%    2.030      1 Template:Caption
+  4.74%    1.436      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115113854 and revision id 1738725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115113906 and revision id 1738729. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
