Created page with "Implementacja [[NativeIFC/pl|Natywnego IFC]] jest w toku. Użytkownicy mogą przeczytać [https://yorik.uncreated.net/?blog%2Ffreecad blog Yorika], aby uzyskać aktualizacje od głównego dewelopera funkcjonalności Natywnego IFC we FreeCAD."

--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -3,7 +3,7 @@
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="pl" dir="ltr">polski</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Classification.html" title="BIM Classification/pl">Klasyfikacja</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;y</a>
@@ -65,9 +65,10 @@
 </p>
 <ul><li>Ikona IFC wskazuje, czy warstwa jest cz&#281;&#347;ci&#261; projektu IFC, czy nie.</li>
 <li>Przycisk <b>Przypisz IFC</b> umo&#380;liwia przeniesienie warstwy do projektu IFC i przekszta&#322;cenie jej w warstw&#281; IFC.</li></ul>
-<p>Implementation of <a href="../NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
+<p>Implementacja <a href="../index.php?title=NativeIFC/pl&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/pl (page does not exist)">Natywnego IFC</a> jest w toku. U&#380;ytkownicy mog&#261; przeczyta&#263; <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">blog Yorika</a>, aby uzyska&#263; aktualizacje od g&#322;&oacute;wnego dewelopera funkcjonalno&#347;ci Natywnego IFC we FreeCAD.
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Layers.html" title="BIM Layers">Manage Layers</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
@@ -128,34 +129,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115113906
+Cached time: 20260115114522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 369/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 370/1000000
 Post&#8208;expand include size: 26104/2097152 bytes
 Template argument size: 9837/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1109/5000000 bytes
+Unstrip post&#8208;expand size: 1110/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.279      1 -total
- 35.30%   10.688      1 Template:BIM_Tools_navi/pl
- 15.63%    4.734      2 Template:Navigation_menu_2
- 14.65%    4.436      1 Template:GuiCommandAddon/pl
- 14.14%    4.283      2 Template:Docnav/pl
- 12.72%    3.852      1 Template:MenuCommand
-  9.65%    2.922      1 Template:Userdocnavi/pl
-  6.70%    2.030      1 Template:Caption
-  4.74%    1.436      2 Template:Button
+100.00%   27.369      1 -total
+ 35.35%    9.676      1 Template:BIM_Tools_navi/pl
+ 19.79%    5.417      2 Template:Navigation_menu_2
+ 14.79%    4.047      2 Template:Docnav/pl
+ 12.98%    3.552      1 Template:GuiCommandAddon/pl
+ 11.32%    3.097      1 Template:Userdocnavi/pl
+ 10.58%    2.896      1 Template:Caption
+  6.80%    1.860      2 Template:Button
+  4.88%    1.335      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115113906 and revision id 1738729. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114522 and revision id 1738733. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
