--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -69,10 +69,10 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Layers.html" title="BIM Layers">Manage Layers</a></span> button.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
-<li>Set options and press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
+<ol><li>Istnieje kilka sposob&oacute;w na wywo&#322;anie tego polecenia:
+<ul><li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Warstwy</a></span>.</li>
+<li>Wybierz opcj&#281; <b>Zarz&#261;dzaj &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Warstwy</b> z menu.</li></ul></li>
+<li>Ustaw opcje i naci&#347;nij <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
 </p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
@@ -129,15 +129,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115114522
+Cached time: 20260115114624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 370/1000000
-Post&#8208;expand include size: 26104/2097152 bytes
-Template argument size: 9837/2097152 bytes
+Post&#8208;expand include size: 26099/2097152 bytes
+Template argument size: 9832/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -145,18 +145,18 @@ Unstrip post&#8208;expand size: 1110/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.369      1 -total
- 35.35%    9.676      1 Template:BIM_Tools_navi/pl
- 19.79%    5.417      2 Template:Navigation_menu_2
- 14.79%    4.047      2 Template:Docnav/pl
- 12.98%    3.552      1 Template:GuiCommandAddon/pl
- 11.32%    3.097      1 Template:Userdocnavi/pl
- 10.58%    2.896      1 Template:Caption
-  6.80%    1.860      2 Template:Button
-  4.88%    1.335      1 Template:MenuCommand
+100.00%   55.999      1 -total
+ 25.54%   14.300      1 Template:BIM_Tools_navi/pl
+ 20.26%   11.347      1 Template:Userdocnavi/pl
+ 19.17%   10.737      1 Template:GuiCommandAddon/pl
+ 17.02%    9.530      2 Template:Button
+ 13.93%    7.803      2 Template:Navigation_menu_2
+  6.42%    3.596      2 Template:Docnav/pl
+  5.62%    3.147      1 Template:Caption
+  4.45%    2.492      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114522 and revision id 1738733. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114624 and revision id 1738735. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
