--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -73,9 +73,10 @@
 <ul><li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Warstwy</a></span>.</li>
 <li>Wybierz opcj&#281; <b>Zarz&#261;dzaj &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Warstwy</b> z menu.</li></ul></li>
 <li>Ustaw opcje i naci&#347;nij <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-<p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
+<p>Odnie&#347; si&#281; do dokumentacji dla <a href="../pl/Draft_Layer.html" title="Draft Layer/pl">Warstw Rysunku Roboczego</a>, aby uzyska&#263; wi&#281;cej informacji o ustawieniach.
+</p><p><span id="Notes"></span>
 </p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
 <ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
 <li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
 <p><br>
@@ -129,13 +130,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115114624
+Cached time: 20260115114711
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 370/1000000
+CPU time usage: 0.074 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 371/1000000
 Post&#8208;expand include size: 26099/2097152 bytes
 Template argument size: 9832/2097152 bytes
 Highest expansion depth: 5/100
@@ -145,18 +146,18 @@ Unstrip post&#8208;expand size: 1110/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.999      1 -total
- 25.54%   14.300      1 Template:BIM_Tools_navi/pl
- 20.26%   11.347      1 Template:Userdocnavi/pl
- 19.17%   10.737      1 Template:GuiCommandAddon/pl
- 17.02%    9.530      2 Template:Button
- 13.93%    7.803      2 Template:Navigation_menu_2
-  6.42%    3.596      2 Template:Docnav/pl
-  5.62%    3.147      1 Template:Caption
-  4.45%    2.492      1 Template:MenuCommand
+100.00%   26.176      1 -total
+ 36.51%    9.558      1 Template:BIM_Tools_navi/pl
+ 21.03%    5.504      2 Template:Navigation_menu_2
+ 16.63%    4.352      2 Template:Docnav/pl
+ 12.86%    3.367      1 Template:GuiCommandAddon/pl
+ 10.30%    2.695      1 Template:MenuCommand
+  9.13%    2.389      2 Template:Button
+  6.69%    1.751      1 Template:Caption
+  5.38%    1.409      1 Template:Userdocnavi/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114624 and revision id 1738735. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114711 and revision id 1738738. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
