Created page with "* Użyj [[BIM_Layers/pl|Menedżera warstw]], aby tworzyć nowe warstwy BIM. Aby tworzyć [[Draft_Layer/pl|Warstwy Rysunku Roboczego]], naciśnij przycisk [[File:Draft_tray_button_layer.png]] na [[Draft_Tray/pl|Tacce narzędziowej]]. * [[Draft_Layer/pl|Warstwy Rysunku Roboczego]] mają nieco inne ustawienia niż warstwy BIM. Nie mieszaj ich, chyba że rozumiesz [https://forum.freecad.org/viewtopic.php?t=102246 różnice]."

--- a/wiki/pl/BIM_Layers.html
+++ b/wiki/pl/BIM_Layers.html
@@ -3,7 +3,7 @@
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Classification.html" title="BIM Classification/pl">Klasyfikacja</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;y</a>
@@ -77,8 +77,8 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
-<ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
-<li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
+<ul><li>U&#380;yj <a class="mw-selflink selflink">Mened&#380;era warstw</a>, aby tworzy&#263; nowe warstwy BIM. Aby tworzy&#263; <a href="../pl/Draft_Layer.html" title="Draft Layer/pl">Warstwy Rysunku Roboczego</a>, naci&#347;nij przycisk <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> na <a href="../pl/Draft_Tray.html" title="Draft Tray/pl">Tacce narz&#281;dziowej</a>.</li>
+<li><a href="../pl/Draft_Layer.html" title="Draft Layer/pl">Warstwy Rysunku Roboczego</a> maj&#261; nieco inne ustawienia ni&#380; warstwy BIM. Nie mieszaj ich, chyba &#380;e rozumiesz <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">r&oacute;&#380;nice</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -130,34 +130,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115114711
+Cached time: 20260115114852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.106 seconds
 Preprocessor visited node count: 371/1000000
 Post&#8208;expand include size: 26099/2097152 bytes
 Template argument size: 9832/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1110/5000000 bytes
+Unstrip post&#8208;expand size: 1114/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.176      1 -total
- 36.51%    9.558      1 Template:BIM_Tools_navi/pl
- 21.03%    5.504      2 Template:Navigation_menu_2
- 16.63%    4.352      2 Template:Docnav/pl
- 12.86%    3.367      1 Template:GuiCommandAddon/pl
- 10.30%    2.695      1 Template:MenuCommand
-  9.13%    2.389      2 Template:Button
-  6.69%    1.751      1 Template:Caption
-  5.38%    1.409      1 Template:Userdocnavi/pl
+100.00%   24.959      1 -total
+ 53.59%   13.375      1 Template:BIM_Tools_navi/pl
+ 28.55%    7.125      2 Template:Navigation_menu_2
+ 14.30%    3.570      1 Template:Userdocnavi/pl
+ 10.04%    2.506      2 Template:Docnav/pl
+  8.59%    2.145      1 Template:GuiCommandAddon/pl
+  4.53%    1.130      1 Template:Caption
+  3.43%    0.856      2 Template:Button
+  3.02%    0.754      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114711 and revision id 1738738. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:244834-0!canonical and timestamp 20260115114852 and revision id 1738740. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
