Created page with "Pokud vás zajímá, jak FreeCAD před lety vznikl, navštivte stránku [[History|Historie]]."

--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -34,12 +34,8 @@
 </div>
 <p>FreeCAD je neust&aacute;le vyv&iacute;jen, tak&#382;e n&#283;kter&eacute; informace mohou b&yacute;t ne&uacute;pln&eacute; nebo zastaral&eacute;. Pokud nem&#367;&#382;ete naj&iacute;t informace, kter&eacute; pot&#345;ebujete, nev&aacute;hejte se zeptat na <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>.
 </p><p>Pokud byste cht&#283;li p&#345;isp&#283;t k FreeCADu, pros&iacute;m <a href="../Donate.html" title="Donate">p&#345;isp&#283;jte</a> a pod&iacute;vejte se na str&aacute;nku <a href="../Help_FreeCAD.html" title="Help FreeCAD">Pomozte FreeCADu</a> kde najdete dal&scaron;&iacute; zp&#367;soby, jak p&#345;isp&#283;t. Pokud byste cht&#283;li editovat tuto wiki, p&#345;e&#269;t&#283;te si <a href="../WikiPages.html" title="WikiPages">WikiPages</a> kde najdete obecn&eacute; pokyny, kter&eacute; byste m&#283;li dodr&#382;ovat.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If you would like to know how FreeCAD started years ago visit the <a href="../History.html" title="History">History</a> page.
-</p>
-</div>
-<p><span id="Using_FreeCAD"></span>
+</p><p>Pokud v&aacute;s zaj&iacute;m&aacute;, jak FreeCAD p&#345;ed lety vznikl, nav&scaron;tivte str&aacute;nku <a href="../History.html" title="History">Historie</a>.
+</p><p><span id="Using_FreeCAD"></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p>A m&aacute;te-li n&#283;jak&eacute; poznatky, kter&eacute; byste r&aacute;di vid&#283;li i zde, nen&iacute; d&#367;vod abyste nep&#345;isp&#283;li a nepomohli n&aacute;m tento manu&aacute;l vylep&scaron;it. P&#345;ejd&#283;te na str&aacute;nku  <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">N&aacute;pov&#283;da FreeCADu</a> , kter&aacute; V&aacute;m s t&iacute;m pom&#367;&#382;e za&#269;&iacute;t. 
@@ -227,13 +223,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115152759
+Cached time: 20260115152904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.215 seconds
-Preprocessor visited node count: 317/1000000
+CPU time usage: 0.130 seconds
+Real time usage: 0.216 seconds
+Preprocessor visited node count: 316/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
 Highest expansion depth: 5/100
@@ -243,17 +239,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.971      1 -total
- 34.71%    5.196      1 Template:Userdocnavi/cs
- 17.93%    2.685      5 Template:Incode
- 15.27%    2.286      1 Template:Navigation_menu_2
- 13.54%    2.027      3 Template:Version
-  9.79%    1.466      1 Template:Button
-  9.12%    1.365      2 Template:VersionMinus
-  7.98%    1.194      1 Template:TOCright
+100.00%   19.657      1 -total
+ 47.72%    9.380      1 Template:Userdocnavi/cs
+ 14.27%    2.806      1 Template:Navigation_menu_2
+ 10.92%    2.146      3 Template:Version
+ 10.22%    2.008      1 Template:TOCright
+  9.52%    1.871      5 Template:Incode
+  8.49%    1.669      2 Template:VersionMinus
+  6.45%    1.268      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152759 and revision id 1738747. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152903 and revision id 1738749. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
